<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc-control</name>
  <version>1.0.0</version>
  <description>ROS2 package for rc control of any type of hardware/robotics</description>
  
  <maintainer email="karpizin@gmail.com">Slava Karpizin</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <!-- Additional ROS2 runtime dependencies -->
  <exec_depend>ros2launch</exec_depend>

  
  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  
  <!-- Additional system dependencies -->
  <exec_depend>python3-rpi.gpio</exec_depend>
  <exec_depend>python3-smbus</exec_depend>
  <exec_depend>i2c-tools</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 
